# softglsl

./: .gitignore  package-lock.json  package.json  vite.config.ts
ast/: Cargo.toml  minimal.glsl
ast/src/: main.rs
fluffygl_interpreter/: Cargo.toml
fluffygl_interpreter/src/: TODO.md  builtins.rs  interpreter.rs  lib.rs  log_macro.rs  web.rs
glast/: Cargo.toml  ast.json
glast/src/: diag.rs  lexer.rs  lib.rs  parser.rs  span.rs  syntax.rs
glast/src/lexer/: preprocessor.rs
glast/src/parser/: ast.rs  grammar.rs
glsl_examples/: complex_frag.glsl  frag_color.glsl  minimal.glsl
lib/: parser.ts
src/: App.tsx  WebGLRenderer.tsx  glslInterpreter.ts  main.ts  main.tsx  parser.peggy  run.ts  style.css
