[package]
name = "fluffygl_interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
glast = { path = "../glast" }
serde_json = "1.0.133"
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
macaw = { version = "0.19.1", features = ["serde", "with_serde"] }
glam = { version = "0.29.2", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "ast_to_json"
path = "bin/ast_to_json.rs"

[[bin]]
name = "interpret_glsl"
path = "bin/interpret_glsl.rs"

[profile.dev]
debug = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
